[project]
name = "wiggle_api"
version = "1.0.0"
description = "Basic API for WiggleBin."
dependencies = [
    "flask",
]

[project.scripts]
wiggle-api = "wiggle_api.main:main"
wiggle-api-install = "wiggle_api.install:install"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"